--- a/WebShop/JavaEE/.classpath
+++ b/WebShop/JavaEE/.classpath
@@ -9,19 +9,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Drivers/Jakarta_persistence/jakarta.persistence-api-2.2.3.jar"/>
-	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Drivers/Jakarta_persistence/jakarta.persistence-api-2.2.3-javadoc.jar"/>
-	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Servers/Tomcat/apache-tomcat-9.0.39/lib/servlet-api.jar" sourcepath="E:/Uni/Masterarbeit/Servers/Tomcat/apache-tomcat-9.0.39/lib">
-		<attributes>
-			<attribute name="source_encoding" value="UTF-8"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.datatools.connectivity.jdt.DRIVERLIBRARY/MySQL JDBC Driver"/>
-	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Projects/JavaEE/WebContent/WEB-INF/lib/json-20200518.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Git-Abgabe/Master_ReactvieServers/WebShop/JavaEE/lib/jakarta.persistence-api-2.2.3.jar"/>
+	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Git-Abgabe/Master_ReactvieServers/WebShop/JavaEE/lib/jakarta.persistence-api-2.2.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Git-Abgabe/Master_ReactvieServers/WebShop/JavaEE/lib/json-20200518.jar"/>
+	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Git-Abgabe/Master_ReactvieServers/WebShop/JavaEE/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="E:/Uni/Masterarbeit/Git-Abgabe/Master_ReactvieServers/WebShop/JavaEE/lib/tomcat-catalina-10.0.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
